# godot-piper-plus

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  project.godot
.github/workflows/: build.yml  pages.yml  release.yml
.godot/: extension_list.cfg
.godot/editor/: editor_layout.cfg  filesystem_cache10  main.tscn-folding-254818f4b91b5a7a67310bd8a2a483f5.cfg
addons/godot_loop_mcp/: plugin.gd
addons/godot_loop_mcp/bridge/: bridge_client.gd
addons/godot_loop_mcp/config/: plugin_settings.gd
addons/godot_loop_mcp/runtime/: runtime_debug_capture.gd  runtime_debugger_plugin.gd  runtime_telemetry.gd
addons/godot_loop_mcp/verification/: verification_service.gd
addons/piper_plus/: README.md  dictionary_editor.gd  download_catalog.json  model_downloader.gd  multilingual_sample_text_catalog.gd  piper_plus.gdextension  piper_plus_plugin.gd  piper_tts_inspector_plugin.gd  preview_controller.gd  test_speech_dialog.gd
cmake/: FindOnnxRuntime.cmake  HTSEngine.cmake  HTSEngine_CMakeLists.txt  OpenJTalk.cmake  OpenJTalk_CMakeLists.txt  PiperPhonemize.cmake
codex-smoke/runtime-tts-check/: runtime_tts_check.gd
codex-smoke/runtime-tts-en-probe/: runtime_tts_en_probe.gd
codex-smoke/runtime-tts-ja-model/: runtime_tts_ja_model.gd
codex-smoke/runtime-tts-ja-probe/: runtime_tts_ja_probe.gd
demo/: main.gd  main.tscn
doc_classes/: PiperTTS.xml
docs/: milestones.md  piper_plus_parity_gap.md  requirements.md  technical_selection.md  test_strategy.md  web-github-pages-plan.md  web-platform-research.md
docs/tickets/: README.md  TKT-001-multilingual-parity.md  TKT-002-web-platform.md  TKT-003-macos-packaged-smoke.md  TKT-004-android-export-runtime.md  TKT-005-windows-android-export-error.md  TKT-006-ios-export-link-smoke.md  TKT-007-release-finalization.md  TKT-008-web-template-toolchain-bootstrap.md  TKT-009-web-manifest-package-export-preset.md  TKT-010-web-runtime-ort-adaptation.md  TKT-011-web-browser-smoke-ci-docs.md  TKT-012-web-github-pages-deploy.md  TKT-018-web-japanese-support.md  TKT-019-web-japanese-dictionary-bootstrap.md  TKT-020-web-japanese-browser-smoke-ci.md  TKT-021-pages-japanese-demo-public-smoke.md  TKT-022-windows-web-six-language-support.md  TKT-023-six-language-capability-template-contract.md  TKT-024-windows-six-language-runtime-smoke.md  TKT-025-web-six-language-runtime-demo-smoke.md  TKT-026-six-language-docs-release-sync.md
docs/tickets/m9-github-pages/: README.md  TKT-013-github-pages-scope-asset-policy.md  TKT-014-github-pages-preset-public-entry.md  TKT-015-github-pages-deploy-workflow.md  TKT-016-github-pages-public-url-smoke.md  TKT-017-github-pages-docs-operational-notes.md
pages_demo/: export_presets.cfg  main.gd  project.godot
scripts/ci/: build-godot-web-templates.sh  build-onnxruntime-web.sh  build-web-side-module.sh  export-android-smoke.sh  export-pages-demo.sh  export-web-smoke.sh  generate-pages-manifest.mjs  install-godot-export-templates.sh  package-addon.sh  prepare-pages-demo-assets.sh  run-pages-demo-smoke.mjs  run-web-smoke.mjs  stage-openjtalk-dictionary.sh  validate-addon-package.sh  validate-pages-artifact.mjs  validate-pages-preset.mjs  validate-web-smoke-presets.mjs  web-smoke-server.mjs
src/: piper_language_support.cpp  piper_language_support.hpp  piper_runtime_support.cpp  piper_tts.cpp  piper_tts.h  piper_tts_paths.cpp  piper_tts_paths.hpp  register_types.cpp
src/piper_core/: custom_dictionary.cpp  english_phonemize.cpp  english_phonemize.hpp  multilingual_phonemize.cpp  multilingual_phonemize.hpp  openjtalk_api.c  openjtalk_api.h  openjtalk_dictionary_manager.c  openjtalk_wrapper.c  openjtalk_wrapper.h  phoneme_parser.cpp  phoneme_parser.hpp  piper.cpp  piper.hpp  piper_test_utils.cpp
test/: prepare-assets.sh  run-tests.sh
test/project/: export_presets.cfg  main.gd  project.godot  test_base.gd  test_piper_tts.gd
test/project/addons/piper_plus/: piper_plus.gdextension
tests/: CMakeLists.txt  test_audio_queue.cpp  test_custom_dictionary.cpp  test_english_phonemize.cpp  test_language_detector.cpp  test_openjtalk_error.cpp  test_openjtalk_security.cpp  test_phoneme_mapping.cpp  test_phoneme_parser.cpp  test_piper_core.cpp
tests/fixtures/: multilingual_capability_matrix.json
tools/: sync_multilingual_sample_text_catalog.py
